# swan_kernel

./: .gitignore  Cargo.toml  Makefile  README.md  main
.cargo/: config.toml
doc/: build.md
doc/tty/: readme.md
isodir/boot/grub/: grub.cfg
src/: interrupts.rs  lib.rs  main.rs  serial.rs  tty.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/arch/x86/: idt.rs
src/drivers/tty/: io.rs
src/task/: simple_executor.rs
swan_kernel/: Cargo.toml
swan_kernel/src/: allocator.rs  gdt.rs  lib.rs  log.rs  memory.rs  vga_buffer.rs
swan_kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
swan_kernel/src/arch/: mod.rs
swan_kernel/src/arch/x86_64/: gdt.rs  interrupts.rs  link.ld  mod.rs  vga_buffer.rs  video.rs
swan_kernel/src/arch/x86_64/devices/: cpu.rs  mod.rs  pic.rs  serial.rs
swan_kernel/src/drivers/: mod.rs
swan_kernel/src/task/: executor.rs  keyboard.rs  mod.rs
swan_kernel/tests/: heap_allocation.rs  stack_overflow.rs
swan_os/: Cargo.toml
swan_os/src/: main.rs  shell.rs  terminal.rs
swan_os/src/usr/: tty.rs
tests/: README.md  heap_allocation.rs  stack_overflow.rs
