[package]
name = "swan_kernel"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
    ]
test-success-exit-code = 33

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"
bootloader = { version = "0.9.22", features = ["map_physical_memory"]}
bootloader_api = "0.11.0"
x86_64 = "0.14.10"
uart_16550= "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
conquer-once = { version = "0.2.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }