[package]
name = "swan_kernel"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-m", "128M"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
    ]
test-success-exit-code = 33

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"
bootloader = { version = "0.9.22", features = ["map_physical_memory"]}
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.5"
conquer-once = { version = "0.2.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11.0.1"
uart_16550= "0.2.0"
pic8259 = "0.10.1"

[target.'cfg(any(target_arch = "x86_64"))'.dependencies]
x86_64 = "0.14.10"